--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   },
   "dependencies": {
     "@harmony-js/core": "^0.1.57",
-    "dotenv": "^10.0.0",
+    "@nomiclabs/hardhat-etherscan": "https://gitpkg.now.sh/victaphu/hardhat/packages/hardhat-etherscan?master",
     "@openzeppelin/contracts4": "npm:@openzeppelin/contracts@^4.3.2",
+    "dotenv": "^10.0.0",
     "ganache-cli": "^6.12.2",
-    "web3": "^1.6.1",
-    "web3-providers-ws": "^1.6.1",
     "hardhat-gas-reporter": "^1.0.4",
-    "solidity-coverage": "^0.7.18-eip165.0"
+    "solidity-coverage": "^0.7.18-eip165.0",
+    "web3": "^1.6.1",
+    "web3-providers-ws": "^1.6.1"
   }
 }
